--- a/RpgGameHub/Views/Web.config
+++ b/RpgGameHub/Views/Web.config
@@ -30,6 +30,7 @@
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
+            <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
     </handlers>
   </system.webServer>
 
