--- a/RpgGameHub.Tests/packages.config
+++ b/RpgGameHub.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="4.1.1" targetFramework="net452" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FluentAssertions" version="4.12.0" targetFramework="net452" />
