Added angular gameFanController, gameFanController api, gameFanRepository, logic to add GameFan to a Meetup and unit test for gameFanController api

--- a/RpgGameHub.Tests/RpgGameHub.Tests.csproj
+++ b/RpgGameHub.Tests/RpgGameHub.Tests.csproj
@@ -87,6 +87,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Controllers\Api\GameFanControllerTests.cs" />
     <Compile Include="Controllers\Api\MeetupControllerTests.cs" />
     <Compile Include="Extensions\MockDbSetExtensions.cs" />
     <Compile Include="Extensions\ApiControllerExtensions.cs" />
