--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,4 @@ ModelManifest.xml
 # FAKE - F# Make
 .fake/
 /RpgGameHub/Properties/PublishProfiles/RpgGameHub - Web Deploy.pubxml
+/RpgGameHub/Properties/PublishProfiles
