--- a/RpgGameHub/packages.config
+++ b/RpgGameHub/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoMapper" version="4.1.1" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="FluentAssertions" version="4.13.0" targetFramework="net452" />
   <package id="jQuery" version="3.0.0.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
